// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputChoiceVanilla Component should render Radio button correctly 1`] = `
<Label
  className=""
  htmlFor="test_1"
  showLabelBeforeInput={false}
>
  <Input
    ariaLabel=""
    className=""
    disabled={false}
    id="test_1"
    name="test_1"
    placeholder=""
    type="radio"
    value=""
  />
  <span
    type="radio"
  />
  <div />
</Label>
`;

exports[`InputChoiceVanilla Component should render checkbox correctly 1`] = `
<Label
  className=""
  htmlFor="test_2"
  showLabelBeforeInput={false}
>
  <Input
    ariaLabel=""
    className=""
    disabled={false}
    id="test_2"
    name="test_2"
    placeholder=""
    type="checkbox"
    value=""
  />
  <span
    type="checkbox"
  />
  <div />
</Label>
`;
